<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bankscene.bes.welllinkbank.activity.finance.TransferActivity">
    <com.bankscene.bes.welllinkbank.view.translucent.TranslucentActionBar
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:type="1"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:gravity="center"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/base_function_block"
        android:padding="4dp">
        <com.bankscene.bes.welllinkbank.view.AccountSpannerItem
            android:id="@+id/spnn_accnum"
            android:layout_width="match_parent"
            android:layout_height="@dimen/finance_item_height"
            android:layout_margin="2.5dp"
            app:spinner_tyle="1"
            app:title="@string/acc_num"
            />
        <com.bankscene.bes.welllinkbank.view.AccountSpannerItem
            android:id="@+id/spann_currency"
            android:layout_width="match_parent"
            android:layout_height="@dimen/finance_item_height"
            app:spinner_tyle="0"
            app:title="@string/spann_currency"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:gravity="center"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/base_function_block"
        android:padding="5dp">
        <com.bankscene.bes.welllinkbank.view.AccountSpannerItem
            android:id="@+id/in_account"
            android:layout_width="match_parent"
            android:layout_height="@dimen/finance_item_height"
            app:spinner_tyle="1"
            app:title="@string/in_account"
            />

        <com.bankscene.bes.welllinkbank.view.AccountSpannerItem
            android:id="@+id/in_currency"
            android:layout_width="match_parent"
            android:layout_height="@dimen/finance_item_height"
            app:spinner_tyle="0"
            app:title="@string/in_currency"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="10dp"
        android:paddingBottom="10dp"
        android:orientation="vertical"
        android:background="@drawable/base_function_block">
        <RadioGroup
            android:id="@+id/rg_in_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp"
            android:divider="@null"
            android:layout_gravity="right"
            >

            <RadioButton
                android:id="@+id/rb_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/pay_amount" />

            <RadioButton
                android:id="@+id/rb_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deposit_amount" />
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/finance_item_height"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:gravity="left|bottom"
                android:layout_height="match_parent"
                android:text="@string/amount"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="match_parent"
                android:orientation="horizontal">
            <EditText
                android:id="@+id/ed_1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_height="match_parent"
                android:background="@drawable/spanner_head_selector"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:gravity="bottom"
                android:layout_marginRight="5dp"
                android:text="."/>
            <EditText
                android:id="@+id/ed_2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"

                android:textStyle="bold"
                android:layout_height="match_parent"
                android:background="@drawable/spanner_head_selector"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btn_preview"
        style="@style/RoundButton"
        android:layout_marginTop="30dp"
        android:text="@string/preview"
        android:background="@drawable/selector_button_login"/>

    <TextView
        android:id="@+id/tv_notice_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/greyText"
        android:textSize="12sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="1234567"
        android:layout_marginTop="15dp"
        />
</LinearLayout>
