<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/ll_pwd_edits"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_item_height"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginRight="10dp"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/wlb_icon_loginname"/>

        <TextView
            android:id="@+id/tv_pre"
            android:text="+853"
            android:gravity="center"
            android:layout_width="45dp"
            android:textSize="@dimen/login_text_size"
            android:layout_height="match_parent"
            android:textColor="@color/main_theme_color"
            />

        <com.bankscene.bes.welllinkbank.view.IconFontTextView
            android:id="@+id/icon_du"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:text="@string/wlb_arrow_d"
            app:fontFile="welllbk.ttf" />

        <com.bankscene.bes.welllinkbank.view.ClearableEditText
            android:id="@+id/login_name"
            android:layout_marginLeft="5dp"
            android:hint="@string/enter_username"
            style="@style/edit_login_style_20"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:background="@color/dark_grey"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_item_height"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/wlb_icon_password"/>

        <com.bankscene.bes.welllinkbank.view.WlbEditText
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:id="@+id/login_password"
            android:inputType="textPassword"
            android:focusableInTouchMode="false"
            android:hint="@string/enter_password"
            style="@style/edit_login_style_20" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:background="@color/dark_grey"
        />
    <!--验证码登陆-->
    <LinearLayout
        android:id="@+id/ll_verify"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_item_height"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/wlb_icon_verifycode"/>

        <EditText
            android:id="@+id/login_verifycode"
            android:layout_marginLeft="5dp"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:inputType="number"
            android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
            android:hint="@string/enter_verify_code"
            style="@style/edit_login_style"/>

        <ImageView
            android:id="@+id/iv_verify"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:scaleType="fitXY"
            android:layout_height="44dp"/>

    </LinearLayout>
    <!-- 动态密码验证-->
    <LinearLayout
        android:id="@+id/ll_otp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_item_height"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/wlb_icon_verifycode"/>

        <EditText
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:id="@+id/otp_verify"
            android:hint="@string/otp_login"
            style="@style/edit_login_style"
            android:inputType="text"
            android:maxLength="6"/>
        <!--<TextView-->
        <!--android:id="@+id/mobileCode"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_weight="1"-->
        <!--android:layout_height="30dp"-->
        <!--android:background="@drawable/_button_round_white"-->
        <!--android:textSize="@dimen/login_text_size_min"-->
        <!--android:text="@string/get_cell_code"-->
        <!--android:gravity="center"-->
        <!--android:textColor="@drawable/_selector_color_code"/>-->
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:background="@color/dark_grey"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp">
        <CheckBox
            android:id="@+id/remerberuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/greyText"
            android:layout_alignParentLeft="true"
            android:text="@string/remerber_usename"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        style="@style/RoundButton_NoMargin"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:onClick="onTapLogin"
        android:background="@drawable/selector_button_login"/>

</LinearLayout>
